# attendance

./: Cargo.toml
py_test/: request.ipynb
src/: lib.rs  main.rs  static.rs
src/glob/: mod.rs
src/user/: controller.rs  mapper.rs  mod.rs  service.rs
src/user/bean/: user.rs
