[package]
name = "attendance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
actix-files = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
# rocket = "0.5.0-rc.2"
env_logger = "0.9.0"
lazy_static = "1.4.0"
tokio =  {version = "1.21.0", features = ["rt", "rt-multi-thread", "macros"]}
rbatis = { version = "*", default-features = false, features = ["runtime-tokio-rustls","mysql","debug_mode"] }
# rbatis = { version = "*", default-features = false, features = ["runtime-tokio-rustls","postgres"] }
rbson = "2.0.5"
once_cell = "1.13.0"
log = "0.4.17"
# fast_log = "1.5.24" 